updated with changes

--- a/css/confirmation-page.css
+++ b/css/confirmation-page.css
@@ -1,15 +1,16 @@
+.thank-you-box {
+  border: solid #ccc9c9;
+  padding: 20px;
+}
+
 .box {
-  border-style: solid;
-  border-color: #ccc9c9;
-  max-width: 1012px;
-  max-height: 713px;
   display: flex;
   flex-direction: row;
-  gap: 25px;
+  gap: 30px;
 }
 
 .information-container,
 .summary-container {
-  border-style: solid;
-  border-color: #ccc9c9;
+  border: solid #ccc9c9;
+  padding: 30px;
 }
