--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,12 @@ button {
 
 h1 {
   font-size: 27px;
+  padding: 0 0 20px 0px;
 }
 
 h2 {
   font-size: 20px;
+  padding: 0 0 20px 0;
 }
 
 h3 {
@@ -35,9 +37,6 @@ main {
 
 /* HEADER */
 .orange-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: end;
   background-color: #f6861e;
   max-width: 100%;
   margin-bottom: 30px;
@@ -49,24 +48,69 @@ main {
   max-height: 100%;
 }
 
-/* HOMEPAGE NAVIGATION */
-.center {
-  display: flex;
-  justify-content: center;
-  padding-top: 70px;
+/* NAVIGATION */
+.homepage-nav {
+  background-color: #0a3641;
+  padding: 17px 21px;
+
+  @media (width > 600px) {
+    display: none;
+  }
 }
 
-.main-nav a {
+.homepage-nav ul {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background: #0a3641;
+}
+
+.nav-icon {
   color: #fff;
   font-size: 20px;
 }
 
-.main-nav {
-  display: flex;
-  gap: 25px;
-  flex-direction: row;
-  justify-content: end;
-  background-color: #f6861e;
+.desktop-homepage-nav {
+  display: none;
+
+  @media (width >600px) {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    color: #fff;
+  }
+}
+
+.homepage-nav ul {
+  @media (width >600px) {
+    gap: 15px;
+    margin: 0 50px;
+  }
+}
+
+.homepage-nav {
+  @media (width >600px) {
+    text-decoration: none;
+    display: flex;
+    justify-content: end;
+    padding: 10px;
+    color: #fff;
+    background-color: #0a3641;
+  }
+}
+
+.homepage-nav a {
+  text-decoration: none;
+}
+
+.nav-header {
+}
+
+.mobile-icon {
+  @media (width >600px) {
+    display: none;
+  }
 }
 
 /* BUTTONS */
@@ -77,7 +121,7 @@ main {
   border-color: transparent;
   border-radius: 17px;
   padding: 10px 20px 10px 20px;
-  margin-bottom: 30px;
+  margin: 10px;
   box-shadow: 5px 5px 25px -10px #000;
 }
 
