--- a/css/payment-details.css
+++ b/css/payment-details.css
@@ -1,4 +1,8 @@
-.payment-details-main {
+.payment-main {
+  margin: 20px;
+}
+
+.payment-details-content {
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -71,12 +75,67 @@
   padding-top: 20px;
 }
 
-.order-summary-content {
+.payment-solutions {
+  display: flex;
+  justify-content: end;
+}
+
+.payment-solutions img {
+  max-height: 40px;
+  width: auto;
+}
+
+.checkout {
+  text-decoration: none;
+  text-align: center;
+  width: 100%;
+  padding: 20px 15px;
+  background-color: #66848a;
+  border: none;
+  border-radius: 17px;
+  font-size: 20px;
+  color: #fff;
+  box-shadow: 5px 5px 25px -10px #000;
+}
+
+.summary-container {
   border: solid #ccc9c9;
   padding: 20px;
 }
 
 .payment-details-img {
   max-width: 105px;
-  height: auto;
+  min-height: auto;
+}
+
+.summary-item-number {
+  font-weight: 400;
+  border-bottom: solid #ccc9c9;
+  padding: 20px 0 10px 0;
+}
+
+.order-summary-content {
+  border-bottom: solid #ccc9c9;
+  padding: 20px 0px;
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+}
+
+.summary-name-size-qty {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.summary-shipping-box {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0;
+}
+
+.summary-total-box {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0;
 }
