--- a/css/products-page.css
+++ b/css/products-page.css
@@ -1,3 +1,7 @@
+.h1-products-page {
+  margin-left: 20px;
+}
+
 .categories-list {
   font-size: 20px;
   list-style-type: none;
@@ -35,8 +39,6 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin: 0 20px 0 0;
-  border: none;
 }
 .products {
   display: flex;
