--- a/css/shopping-cart.css
+++ b/css/shopping-cart.css
@@ -3,7 +3,7 @@
   height: fit-content;
   border-style: solid;
   border-color: #ccc9c9;
-  padding: 20px;
+  padding: 30px;
 }
 
 .checkout-product-img {
@@ -12,6 +12,7 @@
 }
 
 .item-number {
+  font-weight: 400;
   border-bottom: solid #ccc9c9;
   padding: 20px 0 10px 0;
 }
@@ -21,9 +22,13 @@
   padding: 20px 0px;
   display: flex;
   justify-content: space-between;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(6, 1fr);
   gap: 50px;
+}
+
+.product-name-size-qty {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .shipping-box {
@@ -45,7 +50,7 @@
   gap: 20px;
 }
 
-.checkout {
+.pay-now {
   text-decoration: none;
   text-align: center;
   width: 100%;
