--- a/css/products-page.css
+++ b/css/products-page.css
@@ -27,9 +27,15 @@
 }
 
 .product-img {
-  height: 315px;
+  height: 300px;
   width: fit-content;
   padding: 20px;
+
+  @media (width > 600px) {
+    height: 315px;
+    width: fit-content;
+    padding: 20px;
+  }
 }
 
 .product-card {
