--- a/css/products-page.css
+++ b/css/products-page.css
@@ -28,8 +28,8 @@
 
 .product-img {
   height: 300px;
-  width: fit-content;
-  padding: 20px;
+  width: auto;
+  padding: 20px 10px 0 10px;
 
   @media (width > 600px) {
     height: 315px;
@@ -39,12 +39,14 @@
 }
 
 .product-card {
-  width: 372px;
-  height: 507px;
+  width: 300px;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  margin-right: auto;
+  margin-left: auto;
 }
 .products {
   display: flex;
