--- a/css/homepage.css
+++ b/css/homepage.css
@@ -99,8 +99,9 @@
   color: #fff;
   border: 1px solid #fff;
   border-radius: 5px;
-  padding: 5px;
+  padding: 10px;
   font-size: 20px;
+  text-decoration: none;
 
   @media (width > 600px) {
     font-size: 38px;
