commit with changes after WAVE test

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -155,6 +155,10 @@
   font-size: 21px;
 }
 
+.label-email {
+  color: transparent;
+}
+
 .submit-button {
   background-color: #0a3641;
   color: #fff;
