--- a/css/homepage.css
+++ b/css/homepage.css
@@ -109,7 +109,7 @@
 }
 
 .subscribtion-container {
-  background-color: #a4b5b9;
+  background-color: #c4d2d4;
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 10px;
