--- a/css/payment-details.css
+++ b/css/payment-details.css
@@ -1,7 +1,3 @@
-.payment-main {
-  margin: 20px;
-}
-
 .payment-details-content {
   display: flex;
   flex-direction: column-reverse;
@@ -30,11 +26,16 @@
 }
 
 .form-group-payment {
-  border: solid #ccc9c9;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  flex-direction: column;
   gap: 16px;
+  border: solid #ccc9c9;
   padding: 20px;
+
+  @media (width > 600px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .input-card-details {
@@ -44,12 +45,17 @@
 }
 
 .form-group-delivery {
-  border: solid #ccc9c9;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  display: flex;
+  flex-direction: column;
   gap: 16px;
+  border: solid #ccc9c9;
   padding: 20px;
+
+  @media (width > 600px) {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+  }
 }
 
 .delivery-first-name {
@@ -70,14 +76,15 @@
 .delivery-postal {
   grid-area: 3 / 4 / 4 / 5;
 }
+.payment-solutions {
+  grid-area: 4 / 4 / 5 / 5;
+}
+.checkout-button {
+  grid-area: 5 / 1 / 6 / 5;
+}
 
 .delivery-address-container {
   padding-top: 20px;
-}
-
-.payment-solutions {
-  display: flex;
-  justify-content: end;
 }
 
 .payment-solutions img {
@@ -85,57 +92,7 @@
   width: auto;
 }
 
-.checkout {
-  text-decoration: none;
-  text-align: center;
-  width: 100%;
-  padding: 20px 15px;
-  background-color: #66848a;
-  border: none;
-  border-radius: 17px;
-  font-size: 20px;
-  color: #fff;
-  box-shadow: 5px 5px 25px -10px #000;
-}
-
-.summary-container {
-  border: solid #ccc9c9;
-  padding: 20px;
-}
-
-.payment-details-img {
-  max-width: 105px;
-  min-height: auto;
-}
-
-.summary-item-number {
-  font-weight: 400;
-  border-bottom: solid #ccc9c9;
-  padding: 20px 0 10px 0;
-}
-
-.order-summary-content {
-  border-bottom: solid #ccc9c9;
-  padding: 20px 0px;
+.payment-solutions {
   display: flex;
-  justify-content: space-between;
-  gap: 50px;
-}
-
-.summary-name-size-qty {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.summary-shipping-box {
-  display: flex;
-  justify-content: space-between;
-  padding: 20px 0;
-}
-
-.summary-total-box {
-  display: flex;
-  justify-content: space-between;
-  padding: 20px 0;
+  gap: 20px;
 }
