--- a/src/css/style.css
+++ b/src/css/style.css
@@ -159,7 +159,7 @@ footer p {
 .pay-now-button {
   width: 100%;
   padding: 20px 15px;
-  background-color: #66848a;
+  background-color: #3b585e;
 
   font-size: 20px;
 }
@@ -167,7 +167,7 @@ footer p {
 .checkout-button {
   width: 100%;
   padding: 20px 15px;
-  background-color: #66848a;
+  background-color: #3b585e;
 
   font-size: 20px;
 }
