--- a/src/css/frost-peak-details.css
+++ b/src/css/frost-peak-details.css
@@ -1,86 +1,49 @@
-.container {
+.product-details-container {
   border: solid #ccc9c9;
-  padding: 40px;
+  padding: 20px;
+  justify-self: center;
+  margin: 50px;
   display: flex;
   flex-direction: column;
 
   @media (width > 900px) {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
   }
 }
 
-.image-product-details {
+.product-details {
+  display: flex;
+  flex-direction: column;
+
+  @media (width > 900px) {
+  }
+}
+
+.description-and-add-to-cart-btn {
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+
+  @media (width > 900px) {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+}
+
+.product-details {
   grid-area: 1 / 1 / 2 / 2;
 }
-.product-info {
+.description-and-add-to-cart-btn {
   grid-area: 1 / 2 / 2 / 3;
 }
 
+.product-details-title {
+  padding-top: 20px;
+  font-size: 20px;
+}
+
 .product-image {
-  max-width: 556px;
+  max-width: 550px;
   max-height: auto;
-}
-
-.color {
-  height: 52px;
-  width: 52px;
-  background: #706548;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-.product-description {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.color:hover {
-  border-style: solid;
-  border-color: black;
-  border-width: 3px;
-}
-
-.size {
-  font-size: 17px;
-  border: 3px solid #ccc9c9;
-  border-radius: 50%;
-  color: #3c3a3a;
-  padding: 15px;
-  cursor: pointer;
-}
-
-.size:hover {
-  border-style: solid;
-  border-color: black;
-}
-
-.size-selector {
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
-}
-
-.card {
-  border-style: solid;
-  border-color: #ccc9c9;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  gap: 1rem;
-  padding: 3rem 1rem;
-}
-
-.card-image {
-  width: 110px;
-  height: 170px;
-  object-fit: cover;
-
-  @media (width > 900px) {
-    width: 330px;
-    height: 350px;
-  }
 }
