--- a/src/css/frost-peak-details.css
+++ b/src/css/frost-peak-details.css
@@ -1,6 +1,6 @@
 .product-details-container {
   border: solid #ccc9c9;
-  padding: 20px;
+  padding: 40px;
   justify-self: center;
   margin: 50px;
   display: flex;
@@ -23,6 +23,7 @@
   display: flex;
   flex-direction: column;
   text-align: right;
+  gap: 10px;
 
   @media (width > 900px) {
     display: flex;
