--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -52,8 +52,12 @@
 
 .product-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   gap: 1rem;
+
+  @media (width > 900px) {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .valentinesday-sale {
@@ -69,9 +73,11 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
+  max-width: 100vw;
 
   @media (width > 900px) {
     height: 100%;
+    max-height: 1000px;
   }
 }
 
